WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239894
Fix ASAN build after "IPC testing API should have the ability to test IPC::Connection send and receive through IPC::Connection"
https://bugs.webkit.org/show_bug.cgi?id=239894
Summary
Fix ASAN build after "IPC testing API should have the ability to test IPC::Co...
Kimmo Kinnunen
Reported
2022-04-29 04:21:39 PDT
Fix ASAN build after "IPC testing API should have the ability to test IPC::Connection send and receive through IPC::Connection"
Attachments
Patch
(1.44 KB, patch)
2022-04-29 04:24 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-04-29 04:24:21 PDT
Created
attachment 458579
[details]
Patch
EWS
Comment 2
2022-04-29 07:32:33 PDT
Committed
r293612
(
250118@main
): <
https://commits.webkit.org/250118@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458579
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-29 07:33:14 PDT
<
rdar://problem/92523103
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug