Fix ASAN build after "IPC testing API should have the ability to test IPC::Connection send and receive through IPC::Connection" https://bugs.webkit.org/show_bug.cgi?id=239894

Unreviewed build fix.
Add a return for function which does ASSERT_NOT_REACHED().

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-04-29

* WebProcess/WebPage/IPCTestingAPI.cpp:
(WebKit::IPCTestingAPI::JSIPCConnection::didReceiveSyncMessage):

Canonical link: https://commits.webkit.org/250118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293612 268f45cc-cd09-0410-ab3c-d52691b4dbfc